assets/stylesheets/common/common.scss
$header-height: 2.5rem;
$float-height: 530px;

:root {
  --small-message-left-width: 28px;
  --large-message-left-width: 38px;
  --full-page-border-radius: 12px;
  --full-page-sidebar-width: 275px;
}

.tc-composer {
  #chat-full-page-uploader,
  #chat-widget-uploader {
    display: none;
  }
}

.chat-unread-urgent-indicator,
.chat-unread-indicator {
  width: 14px;
  height: 14px;
  border-radius: 100%;
  box-sizing: content-box;
  border: 2px solid var(--secondary);
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.chat-unread-indicator {
  background: var(--tertiary-med-or-tertiary);
}
.chat-unread-urgent-indicator {
  background: var(--success);
  color: var(--secondary);
  font-size: var(--font-down-2);

  .chat-unread-urgent-indicator-number-wrap {
    position: relative;
    width: 100%;
    height: 100%;
    .chat-unread-urgent-indicator-number {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }
  }
}

.header-dropdown-toggle.open-chat {
  .icon {
    &.active {
      .d-icon-comment {
        color: var(--primary-medium);
      }
    }

    &:hover {
      .chat-unread-indicator {
        border-color: var(--primary-low);
      }
    }
    .chat-unread-urgent-indicator,
    .chat-unread-indicator {
      border-color: var(--header_background);
      position: absolute;
      right: 2px;
      bottom: 2px;
      transition: border-color linear 0.15s;
    }
  }
}

.has-sidebar {
  .header-dropdown-toggle.open-chat {
    .chat-unread-indicator {
      border-color: var(--primary-very-low);
    }
  }
}

.topic-chat-float-container {
  font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  // higher than timeline, lower than composer, lower than user card (bump up below)
  z-index: z("usercard");
  position: fixed;
  right: var(--composer-right, 20px);
  left: 0;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  pointer-events: none !important;
  bottom: 0;

  > * {
    pointer-events: auto;
  }

  .no-channel-title {
    font-weight: bold;
  }

  &.composer-draft-collapsed {
    bottom: 40px;
  }

  box-sizing: border-box;
  max-height: 90vh;
  padding-bottom: var(--composer-height, 0);
  transition: all 100ms ease-in;
  transition-property: bottom, padding-bottom;

  .tc-channels {
    .chat-channel-row {
      padding-left: 1em;
      .topic-chat-badge .d-icon {
        background-color: var(--secondary);
      }
    }
    .chat-unread-urgent-indicator,
    .chat-unread-indicator {
      left: 3px;
      width: 8px;
      height: 8px;
      border-radius: 7px;
      top: calc(50% - 5px);
    }
  }
}
.tc-drawer {
  align-self: flex-end;
}

.topic-chat-container {
  background: var(--secondary);
  border: 1px solid var(--primary-low-mid);
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
  border-bottom: 0;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  height: 2.5em;

  &.expanded {
    max-height: $float-height;
    height: calc(85vh - var(--composer-height, 0px));

    .tc-live-pane,
    .tc-chat-listing {
      max-height: calc(#{$float-height} - #{$header-height});
      height: calc(85vh - var(--composer-height, 0px) - #{$header-height});
    }
  }
}

.topic-chat-drawer-header {
  box-sizing: border-box;
  border-bottom: solid 1px var(--primary-low-mid);
  padding: 0.5em;
  height: $header-height;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;

  .btn {
    height: 100%;
  }

  .chat-channel-title {
    width: calc(95% - 0.5em);
    margin-right: 0.5em;
    .chat-name,
    .topic-chat-name,
    .category-chat-name {
      color: var(--primary);
    }
    .badge-wrapper.bullet {
      margin-right: 0px;
    }
    .dm-usernames {
      max-width: 100%;
      overflow: hidden;
      text-overflow: ellipsis;
    }
    .d-icon:not(.d-icon-hashtag) {
      color: var(--primary-high);
    }
    .category-hashtag {
      padding: 2px 4px;
    }
  }
  .tc-unread-count {
    display: inline-block;
    color: var(--secondary, $secondary);
    background-color: var(--tertiary-med-or-tertiary, $danger);
    font-size: var(--font-down-2);
    border-radius: 100%;
    min-width: 1.4em;
    min-height: 1.4em;
    height: 1.4em;
    width: 1.4em;
    padding: 1px;
    text-align: center;
  }
  .tc-full-screen-btn {
    margin-left: auto;
  }
  .tc-full-screen-btn,
  .tc-expand {
    &:focus {
      outline: none;
      background: none;

      .d-icon {
        background: none;
        color: var(--primary-low-mid);
      }
    }
    &:hover {
      .d-icon {
        color: var(--primary-high);
      }
    }
  }
  .d-icon {
    align-self: center;
    height: 1.1em;
    &:hover {
      color: var(--primary-high);
    }
  }
}
.topic-chat-drawer-content {
  height: calc(#{$float-height} - #{$header-height});
}

.tc-channels {
  overflow-y: auto;
  height: 100%;

  .chat-unread-urgent-indicator,
  .chat-unread-indicator {
    width: 10px;
    height: 10px;
    margin-left: 0.5em;
    border-radius: 10px;
    border: 0;
    right: 7px;
    top: calc(50% - 5px);
    .chat-unread-urgent-indicator-number-wrap {
      display: none;
    }
  }
  .edit-channel-membership-btn,
  .new-dm {
    padding: 0.5em;
    color: var(--primary-medium);

    .d-icon {
      color: var(--primary-medium);
    }
  }
  .public-channel-empty-message {
    margin: 0 0.5em 0.5em 0.5em;
  }
  .chat-channel-divider {
    font-weight: bold;
    padding: 0.5em;
    text-transform: uppercase;
    font-family: var(--heading-font-family);
    font-size: 13px;
  }
  .dm-creation-row .dm-user-chooser {
    width: calc(100% - 75px);
  }
}
/* ... */

